# WindCalculator

./: CMakeCache.txt  CMakeLists.txt  README.md
include/: csvparser.h  geo_intersect.h  mesh.h  string_split.h  valueType.h
src/: csvparser.c  geo_intersect.cpp  mesh.cpp  smileInterface.cpp  string_split.cpp
src_old/: fluentIO.cpp  fluentIO.h  fluent_value.h
